fix code wrap 🌯

--- a/src/styles/components/new-moon.scss
+++ b/src/styles/components/new-moon.scss
@@ -44,7 +44,7 @@ pre code {
   color: $code-font-color;
   direction: ltr;
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
   line-height: 1.7;
